examples/datalog/33_meta/30_timing_command.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_timing
Knowledge graph 'test_timing' created.
Switched to knowledge graph: test_timing
> .kg use test_timing
Switched to knowledge graph: test_timing
> +data[(1,), (2,), (3,), (4,), (5,)].
Inserted 5 fact(s) into 'data'.
> .timing on
Script error: Parse error: Unknown meta command: .timing
